Fix for bug 57047 - we are not treating text inside <pre> as preformatted if the text is inside another tag inside the <pre>. This has affected mail and copy'n'paste. We now look more thoroughly at the tag stack. r=akkana@netscape.com a=vidur@netscape.com.